--- a/.github/workflows/terraform-deploy-plz.yml
+++ b/.github/workflows/terraform-deploy-plz.yml
@@ -63,9 +63,9 @@ jobs:
 
       - name: "Terraform: Init"
         run: >
-          terraform init -backend-config="resource_group_name=$TF_BACKEND_RG_NAME" \
-          -backend-config="storage_account_name=$TF_BACKEND_SA_NAME" \
-          -backend-config="container_name=$TF_BACKEND_CN_NAME" \
+          terraform init -backend-config="resource_group_name=$TF_BACKEND_RG_NAME" 
+          -backend-config="storage_account_name=$TF_BACKEND_SA_NAME" 
+          -backend-config="container_name=$TF_BACKEND_CN_NAME" 
           -backend-config="key=$TFSTATE_FILE"
 
       - name: "Terraform: Plan"
