--- a/.github/workflows/terraform-deploy-plz.yml
+++ b/.github/workflows/terraform-deploy-plz.yml
@@ -62,16 +62,18 @@ jobs:
           terraform_version: 1.13.1
 
       - name: "Terraform: Init"
-        run: >
-          terraform init -backend-config="resource_group_name=$TF_BACKEND_RG_NAME" 
-          -backend-config="storage_account_name=$TF_BACKEND_SA_NAME" 
-          -backend-config="container_name=$TF_BACKEND_CN_NAME" 
+        run: |
+          terraform init -backend-config="resource_group_name=$TF_BACKEND_RG_NAME" \
+          -backend-config="storage_account_name=$TF_BACKEND_SA_NAME" \
+          -backend-config="container_name=$TF_BACKEND_CN_NAME" \
           -backend-config="key=$TFSTATE_FILE"
 
       - name: "Terraform: Plan"
         if: ${{ github.event.inputs.action == 'Plan' }}
         run: |
-          terraform plan -out=tfplan -var-file=$TFVARS_FILE
+          terraform plan -out=tfplan -var-file=$TFVARS_FILE \
+          -var="tenant_id=$ARM_TENANT_ID" \
+          -var="subscription_id=$ARM_SUBSCRIPTION_ID"
 
       - name: "Terraform: Apply"
         if: ${{ github.event.inputs.action == 'Plan-Apply' }}
