fix: Update destroy step to use vars.

--- a/.github/workflows/deploy-azure-platformlz.yml
+++ b/.github/workflows/deploy-azure-platformlz.yml
@@ -81,4 +81,6 @@ jobs:
       - name: "Terraform: Destroy"
         if: ${{ github.event.inputs.action == 'Destroy' }}
         run: |
-          terraform destroy --auto-approve -var-file=$TFVARS_FILE
+          terraform destroy --auto-approve -var-file=$TFVARS_FILE \
+          -var="azure_tenant_id=$ARM_TENANT_ID" \
+          -var="subscription_id=$ARM_SUBSCRIPTION_ID"
